--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
   <!-- 
     - google font link
   -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700;800&display=swap"
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800;900;1000&family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Mulish:wght@200;300;400;500;600;700;800;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- 
       - tailwind cdn
@@ -265,14 +264,6 @@
               </div>
               <div class="box">
                 <p>التصميم الجرافيكي والتسويق الرقمي</p>
-              </div>
-            </div>
-            <div class="st">
-              <div class="box">
-                <p>ماجيستير</p>
-              </div>
-              <div class="box">
-                <p>غير مفهوم !؟</p>
               </div>
             </div>
           </div>
